--- a/day7/LambdaFunction/LambdaFunction/LambdaFunction.csproj
+++ b/day7/LambdaFunction/LambdaFunction/LambdaFunction.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>LambdaFunction.Employsort</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicComparer.cs" />
     <Compile Include="Employ.cs" />
+    <Compile Include="Employsort.cs" />
     <Compile Include="LambdaEx1.cs" />
+    <Compile Include="NameComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
